# gnirehtet

./: .gitignore  DEVELOP.md  LICENSE  PKGBUILD  README.md  build.gradle  gnirehtet  gnirehtet.cmd  release  settings.gradle
app/: build.gradle  local.properties  proguard-rules.pro
app/release/: gnirehtet.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/genymobile/gnirehtet/: AuthorizationActivity.java  Binary.java  CIDR.java  DisconnectionNotifier.java  Forwarder.java  GnirehtetActivity.java  GnirehtetControlReceiver.java  GnirehtetControlService.java  GnirehtetService.java  IPPacketOutputStream.java  InvalidCIDRException.java  IoUtils.java  Net.java  Notifier.java  PersistentRelayTunnel.java  RelayClient.java  RelayTunnel.java  RelayTunnelListener.java  RelayTunnelProvider.java  Tunnel.java  VpnConfiguration.java
app/src/main/res/drawable/: ic_report_problem_24dp.xml  ic_usb_24dp.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/genymobile/gnirehtet/: TestIPPacketOutputSteam.java
checkstyle/: checkstyle.xml
config/: android-signing.gradle  java-checkstyle.gradle
config/checkstyle/: checkstyle.xml
gradle/wrapper/: gradle-wrapper.properties
relay/: build.gradle  gnirehtet.cmd
relay-java/: gnirehtet
relay-java/scripts/: gnirehtet-run.cmd  gnirehtet.cmd
relay-java/src/main/java/com/genymobile/gnirehtet/: AdbMonitor.java  CommandLineArguments.java  Main.java
relay-java/src/test/java/com/genymobile/gnirehtet/: AdbMonitorTest.java  CommandLineArgumentsTest.java
relay-rust/: Cargo.toml  build.gradle  proxy.toml.example
relay-rust/scripts/: gnirehtet-noconsole.vbs  gnirehtet-run.cmd
relay-rust/src/: adb_monitor.rs  cli_args.rs  execution_error.rs  lib.rs  logger.rs  main.rs
relay-rust/src/relay/: binary.rs  byte_buffer.rs  client.rs  close_listener.rs  connection.rs  datagram.rs  datagram_buffer.rs  interrupt.rs  ipv4_header.rs  ipv4_packet.rs  ipv4_packet_buffer.rs  mod.rs  packet_source.rs  packetizer.rs  proxy_config.rs  relay.rs  router.rs  selector.rs  socks5_protocol.rs  stream_buffer.rs  tcp_connection.rs  tcp_header.rs  transport_header.rs  tunnel_server.rs  udp_connection.rs  udp_header.rs
relay/src/main/java/com/genymobile/gnirehtet/: CommandLineArguments.java  Main.java
relay/src/main/java/com/genymobile/relay/: AbstractConnection.java  Binary.java  Client.java  CloseListener.java  CommandExecutionException.java  (+28 more)
rustrelay/: Cargo.toml  build.gradle
rustrelay/src/: cli_args.rs  lib.rs  logger.rs  main.rs
rustrelay/src/relay/: binary.rs  client.rs  close_listener.rs  connection.rs  datagram.rs  datagram_buffer.rs  eventhandler.rs  ipv4_header.rs  ipv4_packet.rs  ipv4_packet_buffer.rs  ipv4header.rs  ipv4packet.rs  mod.rs  net.rs  observer.rs  packet_source.rs  packet_storage.rs  packetizer.rs  relay.rs  route.rs  router.rs  selector.rs  source_destination.rs  stream_buffer.rs  tcp_connection.rs  tcp_header.rs  transport_header.rs  transportheader.rs  tunnel_server.rs  tunnelconnection.rs  tunnelserver.rs  udp_connection.rs  udp_header.rs  udpheader.rs
setup/: gnirehtet-autorun.lnk  gnirehtet-run.cmd  gnirehtet.apk  remote-install_app.cmd
(+56 files in other folders)
