[package]
name = "gnirehtet"
version = "2.5.0"
authors = ["Romain Vimont <rom@rom1v.com>"]
edition = "2018"

[lib]
name = "relaylib"
path = "src/lib.rs"

[dependencies]
mio = "0.6"       # for async I/O
slab = "0.4"      # helper for mio Tokens
log = "0.4"       # for logs
chrono = "0.4"    # for formatting timestamp in logs
byteorder = "1.3" # for reading/writing binary
rand = "0.7"      # for random TCP sequence number
ctrlc = { version = "3.0", features = ["termination"] }     # for handling Ctrl+C
tokio = { version = "1.2", features = ["io-util", "macros", "net", "parking_lot", "process", "rt"] }
thiserror = "1.0"
bytes = "1.0"
pin-project = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
iprange = "0.6"
ipnet = "2.3"
once_cell = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
ws2_32-sys = "0.2"

[profile.release]
lto = true     # link-time optimization
